--- a/package.json
+++ b/package.json
@@ -4,21 +4,20 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "component-remote-build:DataExport": "vue-cli-service build --no-clean --target lib --inline-vue --name DataExport ./resources/components/DataExport/index.js"
+        "build": "vite build",
+        "watch": "vite build --watch"
     },
     "dependencies": {
-        "@vue/cli-plugin-typescript": "^5.0.4",
-        "@vue/cli-service": "^5.0.4",
+        "@vitejs/plugin-vue": "^5.0.5",
         "ant-design-vue": "^4.0.0",
         "axios": "^0.25",
         "exceljs": "^4.3.0",
         "file-saver": "^2.0.5",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "ts-loader": "^9.2.9",
         "typescript": "^4.6.4",
-        "vue": "^3.2.13",
-        "vue-loader": "^16.2.0"
+        "vite": "^5.3.1",
+        "vue": "^3.2.13"
     },
     "author": "",
     "license": "ISC",
